--- a/lib/resources/r4/provenance.yaml
+++ b/lib/resources/r4/provenance.yaml
@@ -81,12 +81,65 @@ fields:
         }
       ]
     }
-  note: |
-    <ul>
-      <li> Only one agent may be provided. </li>
-      <li> All `coding` must contain the `system` and `code` fields. </li>
-    </ul>
+  note: <ul><li> Only one agent may be provided. </li></ul>
   url: http://hl7.org/fhir/R4/provenance-definitions.html#Provenance.agent
+  children:
+
+    - name: type
+      required: 'No'
+      cardinality: 0..1
+      type: CodeableConcept
+      description: The participation the agent had with respect to the activity.
+      action: create
+      url: https://hl7.org/fhir//R4/provenance-definitions.html#Provenance.agent.type
+      example: |
+        {
+          "type": {
+            "coding": [
+              {
+                "system": "http://hl7.org/fhir/us/core/CodeSystem/us-core-provenance-participant-type",
+                "code": "transmitter"
+              }
+            ]
+          }
+        }
+      notes: <ul><li> All `coding` must contain the `system` and `code` fields. </li></ul>
+
+    - name: role
+      required: 'No'
+      cardinality: 0..*
+      type: CodeableConcept
+      description: The function of the agent with respect to the activity.
+      action: create
+      url: http://hl7.org/fhir//R4/provenance-definitions.html#Provenance.agent.role
+      example: |
+        {
+          "role": [
+            {
+              "coding": [
+                {
+                  "system": "http://terminology.hl7.org/CodeSystem/contractsignertypecodes",
+                  "code": "SOURCE"
+                }
+              ]
+            }
+          ]
+        }
+      notes: <ul><li> All `coding` must contain the `system` and `code` fields. </li></ul>
+
+    - name: who
+      required: 'Yes'
+      cardinality: 1..1
+      type: Reference
+      description: The individual, device or organization that participated in the event.
+      action: create
+      url: http://hl7.org/fhir//R4/provenance-definitions.html#Provenance.agent.who
+      example: |
+        {
+          "who": {
+            "reference": "Organization/619848"
+          }
+        }
 
 - name: entity
   required: 'No'
@@ -108,16 +161,36 @@ fields:
   url: http://hl7.org/fhir/R4/provenance-definitions.html#Provenance.entity
   children:
 
-  - name: role
-    required: 'Yes'
-    cardinality: 1..1
-    type: code
-    description: How the entity was used during the activity.
-    action: terminology
-    url: https://hl7.org/fhir/R4/provenance-definitions.html#Provenance.entity.role
-    binding:
+    - name: role
+      required: 'Yes'
+      cardinality: 1..1
+      type: code
       description: How the entity was used during the activity.
-      terminology:
-      - display: Provenance Entity Role
-        system: http://hl7.org/fhir/provenance-entity-role
-        info_link: https://hl7.org/fhir/R4/codesystem-provenance-entity-role.html
+      action:
+        - terminology
+        - create
+      url: https://hl7.org/fhir/R4/provenance-definitions.html#Provenance.entity.role
+      binding:
+        description: How the entity was used during the activity.
+        terminology:
+          - display: Provenance Entity Role
+            system: http://hl7.org/fhir/provenance-entity-role
+            info_link: https://hl7.org/fhir/R4/codesystem-provenance-entity-role.html
+      example: |
+        {
+          "role": "source"
+        }
+
+    - name: what
+      required: 'Yes'
+      cardinality: 1..1
+      type: Reference
+      description: Identity of the Entity used.
+      action: create
+      url: http://hl7.org/fhir//R4/provenance-definitions.html#Provenance.entity.what
+      example: |
+        {
+          "what": {
+            "reference": "DocumentReference/S-201"
+          }
+        }
